[all] WIP fixing light gallery thumb z-index on EDGE

--- a/laravel/resources/assets/css/style-base.css
+++ b/laravel/resources/assets/css/style-base.css
@@ -225,6 +225,12 @@ td[align='left']{
 }
 
 /*LightGallery*/
+.lg-backdrop{
+	z-index: 1055;
+}
+.lg-outer{
+	z-index: 1060;
+}
 .lg-outer .lg-thumb {
 	margin-left: auto !important;
 	margin-right: auto !important;
